# voxel_mesher

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
data/: Bunny.normal  test_point_cluster_mesh_0.normal
src/: BallRegionCompute.cpp  BallRegionCompute.h  CMakeLists.txt  GeneralSimplification.hpp  GenerateRemesh.hpp  LoadPointCloud.hpp  Method_AIVS_OM.hpp  Method_AIVS_Remesh.hpp  Method_CGAL_Advancing.hpp  PlyLoad.cpp  PlyLoad.h  View.h  VoronoiDiagram.h  main.cpp  normalCompute.hpp  pointProcessPipeline.hpp  trackball.cpp  trackball.h
src/FileProcess/: CBrowseDir.cpp  CBrowseDir.h  CStatDir.hpp
src/GLM/: glm.cpp  glm.h  glmVector.h
